objects/SFHCO_Ledger__c.object
<CustomObject>
    <description>SFHCO Ledger</description>
    <fields>
        <fullName>Allocated_Timestamp__c</fullName>
        <label>Allocated Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Allocation_Amount__c</fullName>
        <label>Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Hours__c</fullName>
        <label>Average Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Accrual__c</fullName>
        <label>Benefit Accrual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Candidate__r.FirstName +&quot; &quot;+ Candidate__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SFHCO_Ledger</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conversion_rate__c</fullName>
        <label>Dollar Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_This_Pay_Period__c</fullName>
        <label>Hours This Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Discarded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A generated SFHCO accrual is discarded by the user, by creating a negative accrual</description>
        <inlineHelpText>A generated SFHCO accrual is discarded by the user, by creating a negative accrual</inlineHelpText>
        <label>Is Discarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_90_Days_Hours__c</fullName>
        <label>Last 90 Days Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Id__c</fullName>
        <formula>Pay_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Period Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Period</label>
        <referenceTo>Pay_Period__c</referenceTo>
        <relationshipName>SFHCO_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFHCO_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCSO Ledger</label>
        <referenceTo>SFHCO_Ledger__c</referenceTo>
        <relationshipLabel>HCSO Ledger</relationshipLabel>
        <relationshipName>SFHCO_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stipend_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stipend Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stipend__c</fullName>
        <label>Stipend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>tc9_ti__Transaction__c</referenceTo>
        <relationshipName>SFHCO_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HCSO Ledger</label>
    <nameField>
        <label>SFHCO Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HCSO Ledger</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Stipend_cannot_exceed_Benefits</fullName>
        <active>true</active>
        <errorConditionFormula>Stipend__c &gt;  Benefit_Accrual__c</errorConditionFormula>
        <errorDisplayField>Stipend__c</errorDisplayField>
        <errorMessage>Stipend must not exceed Benefits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stipend_cannot_exceed_Capped_Value</fullName>
        <active>true</active>
        <errorConditionFormula>Stipend__c &gt; 100</errorConditionFormula>
        <errorDisplayField>Stipend__c</errorDisplayField>
        <errorMessage>Stipend cannot exceed $ 100</errorMessage>
    </validationRules>
</CustomObject>